--- a/steamFriends/src/app/user/user.component.html
+++ b/steamFriends/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<h2>{{ user.name | uppercase }} Details</h2>
+<!-- <h2>{{ user.name | uppercase }} Details</h2>
 <div><span>id: </span>{{user.steamId}}</div>
 <div>
 	<label>name:
@@ -7,4 +7,4 @@
 
 	<pre>{{myData | json}}</pre>
 
-</div>
+</div> -->
