--- a/steamFriends/src/app/app.component.html
+++ b/steamFriends/src/app/app.component.html
@@ -14,18 +14,10 @@
       <h4>Rechercher un jeu<br>Liste des jeux</h4>
     </div>
     <div class="col-sm">
-			<form>
-			  <div class="form-group">
-			    <label for="exampleInputEmail1">ID steam</label>
-			    <input type="text" class="form-control" id="idSteam" placeholder="Entrer l'ID Steam">
-			  </div>
-			  <button type="button" class="btn btn-dark">Rechercher</button>
-			</form>
+			<app-user-form></app-user-form>
     </div>
     <div class="col-sm">
       One of three columns
     </div>
   </div>
 </div>
-
-<app-user></app-user>
