--- a/steamFriends/src/app/user/user.component.html
+++ b/steamFriends/src/app/user/user.component.html
@@ -1,10 +1,11 @@
-<!-- <h2>{{ user.name | uppercase }} Details</h2>
-<div><span>id: </span>{{user.steamId}}</div>
 <div>
-	<label>name:
-		<input [(ngModel)]="user.name" placeholder="name">
-	</label>
 
-	<pre>{{myData | json}}</pre>
+	<br />
 
-</div> -->
+
+	<button type="button" class="btn btn-success" (click)="test();" [disabled]="!user">Test</button>
+
+	<div [hidden]="disabled">
+		<pre>{{myData | json}}</pre>
+	</div>
+</div>
