--- a/steamFriends/src/app/user/user.component.html
+++ b/steamFriends/src/app/user/user.component.html
@@ -2,10 +2,10 @@
 
 	<br />
 
+	<div *ngIf="!disabled">
+		<img src="{{ profile.avatar }}" />
+		<span>{{profile.personaname}}</span>
+		<button type="button" class="btn btn-success" (click)="test();">Test</button>
 
-	<button type="button" class="btn btn-success" (click)="test();" [disabled]="!user">Test</button>
-
-	<div [hidden]="disabled">
-		<pre>{{myData | json}}</pre>
 	</div>
 </div>
