--- a/steamFriends/src/app/user/user.component.html
+++ b/steamFriends/src/app/user/user.component.html
@@ -1,29 +1,58 @@
 <div>
+	<div class="row">
+		<div class="col-sm">
+			<h4>Liste des jeux</h4>
+			<div *ngIf="games != undefined">
+			<h5><span class="float-left">Total jeu : {{games.game_count}}</span></h5><br /><br />
+				<div *ngFor="let item of games.games">
+					<div class="">
+						<img class="img-responsive float-left" src="http://media.steampowered.com/steamcommunity/public/images/apps/{{item.appid}}/{{ item.img_icon_url}}.jpg" alt="{{item.name}}" />
+						<span class=""> {{ item.name }} </span>
+					</div>
+					<br />
+					
+				</div>
+			</div>
+		</div>
+		<div class="col-sm">
+			<div *ngIf="!disabled">
+				<div class="panel panel-success">
+					<div class="panel-heading">
+						<h3 class="panel-title">{{profile.personaname}}</h3>
+					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-sm-auto col-md-auto">
+								<img class="img-responsive rounded" src="{{ profile.avatarmedium }}" />
+							</div>
+							<div class="col-sm">
+								<span class="float-left">Date d'inscription : {{profile.timecreated * 1000 | date:'yyyy-MM-dd'}}</span><br />
+								<span class="float-left">Pays : </span><img class="img-responsive pull-left" src="https://steamcommunity-a.akamaihd.net/public/images/countryflags/{{ profile.loccountrycode | lowercase }}.gif" alt="FR" />
+
+							</div>
+						</div>
+						<button type="button" class="btn btn-success" (click)="test();">Test</button>
+						<button type="button" class="btn btn-success" (click)="getFriendList();">See all friends</button>
+					</div>
+				</div>
+
+				<div *ngIf="friends != undefined">
+					<div *ngFor="let item of friends">
+						{{ item.name }} | {{item.friend_since * 1000 | date:'yyyy-MM-dd'}}<br />
+					</div>
+				</div>
+
+				<div *ngIf="myData != undefined">
+					<pre> {{ myData | json }} </pre>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm">
+			One of three columns
+		</div>
+	</div>
 
 	<br />
 
-	<div *ngIf="!disabled">
-		<div class="panel panel-success">
-			<div class="panel-heading">
-				<h3 class="panel-title">{{profile.personaname}}</h3>
-			</div>
-			<div class="panel-body">
-				<div class="row">
-					<div class="col-sm-auto col-md-auto">
-						<img class="img-responsive rounded" src="{{ profile.avatarmedium }}" />
-					</div>
-					<div class="col-sm">
-						<span class="float-left">Date d'inscription : {{profile.timecreated * 1000 | date:'yyyy-MM-dd'}}</span><br />
-						<span class="float-left">Pays : </span><img class="img-responsive pull-left" src="https://steamcommunity-a.akamaihd.net/public/images/countryflags/{{ profile.loccountrycode | lowercase }}.gif" alt="FR" />
-						<span class="float-left">Jeu : {{games.game_count}}</span><br />
-					</div>
-				</div>
-				<button type="button" class="btn btn-success" (click)="test();">Test</button>
-				<button type="button" class="btn btn-success" (click)="getFriendList();">See all friends</button>
-			</div>
-		</div>
-		<div *ngIf="myData != undefined">
-			<pre> {{ myData | json }} </pre>
-		</div>
-	</div>
+
 </div>
